# toy-crawler-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/: dependabot.yml
src/: crawler.rs  db.rs  downloader.rs  main.rs  parser.rs  task.rs
src/server/: filters.rs  handlers.rs  mod.rs
