[package]
name = "web-crawler-server"
version = "0.1.0"
authors = ["Iulian Gabriel RADU <gradu@bitdefender.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.2"
scraper = "0.12"
anyhow = "1"
thiserror = "1"
url = { version = "2.2", features = ["serde"] }
robotstxt = "0.3"

[dev-dependencies]
mockito = "0.30"